[tool.poetry]
name = "gdb_playdround"
version = "0.1.0"
description = ""
authors = ["Leung Wai Lun <williamleung@atal.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.8.0"
pylint = "^2.15.0"
neo4j = "^4.4.6"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
